--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "palmettoflow-pouchdb-svc",
   "version": "1.0.0",
-  "description": "",
+  "description": "A service that provides the following functions on a pouchDB Database:",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +20,16 @@
     "palmettoflow-nodejs": "^1.0.1",
     "rewire": "^2.3.4",
     "tap": "^2.1.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/twilson63/palmettoflow-pouchdb-svc.git"
+  },
+  "bugs": {
+    "url": "https://github.com/twilson63/palmettoflow-pouchdb-svc/issues"
+  },
+  "homepage": "https://github.com/twilson63/palmettoflow-pouchdb-svc#readme"
 }
